--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
@@ -712,6 +712,6 @@
 
 
 <script src="js/aos.js"></script> 
-<script src="js/script.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>  
