--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Restaurant</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/font-awesome.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="font-awesome.css">
+  <link rel="stylesheet" href="aos.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
