--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container">
       <div class="row justify-content-between align-items-center">
         <div class="logo">
-          <a hrif="#"><img src="../restaurant website version1/img/logo.png"alt="logo"></a>
-          <a class ="veg"hrif="#"><img src="../restaurant website version1/img/vefimg.png"alt="logo"></a>
+          <a hrif="#"><img src="logo.png"alt="logo"></a>
+          <a class ="veg"hrif="#"><img src="vefimg.png"alt="logo"></a>
         </div>
         <button type="button" class="nav-toggler">
           <span></span>
@@ -66,7 +66,7 @@
           </div>
       <div class="about-img">
         <div class="img-box" data-aos="fade-left" data-aos-duration="1000">
-          <img src="../restaurant website version1/img/aboutimg.jpg" alt="about img">
+          <img src="aboutimg.jpg" alt="about img">
         </div>
       </div>
     </div>
@@ -648,21 +648,21 @@
       </div>
       <div class="row">
         <div class="services-item" data-aos="flip-right"  data-aos-duration="900">
-          <img class="img1" src="../restaurant website version1/img/cateringimg.jpg">
+          <img class="img1" src="cateringimg.jpg">
           <div class="services-item-info">
             <h2>Lorem, ipsum.</h2>
             <p>Lorem ipsum dolor sit e va rg f</p>  
           </div>
         </div>
         <div class="services-item" data-aos="flip-left"  data-aos-duration="900">
-          <img class="img2" src="../restaurant website version1/img/eventsimg.jpg">
+          <img class="img2" src="eventsimg.jpg">
           <div class="services-item-info">
             <h2>Lorem, ipsum.</h2>
             <p>Lorem ipsum dolor sit e va rg f</p>  
           </div>
         </div>
         <div class="services-item" data-aos="flip-right"  data-aos-duration="900">
-          <img class="img3" src="../restaurant website version1/img/deliviery.png">
+          <img class="img3" src="deliviery.png">
           <div class="services-item-info">
             <h2>Lorem, ipsum.</h2>
             <p>Lorem ipsum dolor sit e va rg f</p> 
@@ -711,7 +711,7 @@
 
 
 
-<script src="js/aos.js"></script> 
-<script src="js/index.js"></script>
+<script src="aos.js"></script> 
+<script src="index.js"></script>
 </body>
 </html>  
